Version ClaSS-1.0.26 release (2012/08/15)
-------------------------------------------

Added an examcenter field to the eidsid table - to be used when
transferring results between centers.

list_sections function creates access groups if they don't exist.



Version ClaSS-1.0.25 release (2012/08/12)
-------------------------------------------

Profile column of type dif now works with raw values and grades.

Fix demoiser to work with new class ids.

Added a flag to the classes table to identify those taught by their
form tutors.

Automatically assign form tutors their related teaching class.

Made editing of forms and the function list_form_classes rewritten to
be compatible with new class structure

Generating new class structure updated.

Added an unassign button to the teacher_matrix table.

New export option for staff details.

Changed the default naming of sub-budgets to match their budget code.

Small change to the currency array to make use of ISO codes instead
language string.

New CFG option budget_lock to disable locking of budgets with low
balance.

Started to add predefined message option.



Version ClaSS-1.0.24 release (2012/08/02)
-------------------------------------------

New db tables for file storage and organising by virtual folders.

Sepcial perms group exception added for communities idependent of
yeargroup (yid=-9000).

Added perm groups for community type=reg and reggistration groups
moved to the formgroup_matrix.

New fees_invoice field for the series number.

New fees_account field to record a validity check.

New fees_remittance field for yeargroups. Filter by yeargroup in
new_remittance_action.

Search for fee invoices implemented.

Improved utf8_to_ascii function to use mb_convert_encoding.

Private filter option added to student_list.


Version ClaSS-1.0.23 release (2012/07/12)
-------------------------------------------

New fields added to users table including personal email.
